--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 <body>
   <div class="mainContainer">
     <h3>Basic Calculator</h3>
-    <div class="display">10 + 10 = 20</div>
+    <div class="display"></div>
     <div class="calculatorContainer">
       <button class="btn">7</button>
       <button class="btn">8</button>
       <button class="btn">9</button>
-      <button class="btn op">/</button>
+      <button class="divideBtn">/</button>
       <button class="btn">4</button>
       <button class="btn">5</button>
       <button class="btn">6</button>
-      <button class="btn op">*</button>
+      <button class="multiplyBtn">*</button>
       <button class="btn">1</button>
       <button class="btn">2</button>
       <button class="btn">3</button>
-      <button class="btn op">-</button>
+      <button class="subtractBtn">-</button>
       <button class="btn">0</button>
       <button class="btn">.</button>
-      <button class="btn">C</button>
-      <button class="btn op">+</button>
-      <button class="btn equal">=</button>
+      <button class="clear">C</button>
+      <button class="addBtn">+</button>
+      <button class="equalBtn">=</button>
     </div>
   </div>
   
