--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button class="btn">3</button>
       <button class="subtractBtn">-</button>
       <button class="btn">0</button>
-      <button class="btn">.</button>
+      <button class="dotBtn">.</button>
       <button class="clear">C</button>
       <button class="addBtn">+</button>
       <button class="equalBtn">=</button>
