Improve CSS for the buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="mainContainer">
-    <h3>Basic Calculator</h3>
+    <h3>Magic Calculator</h3>
     <div class="display"></div>
     <div class="calculatorContainer">
       <button class="btn">7</button>
