--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="mainContainer">
-    <h3>Magic Calculator</h3>
+    <!-- <h3>Magic Calculator</h3> -->
     <div class="display"></div>
     <div class="calculatorContainer">
       <button class="btn">7</button>
@@ -27,10 +27,14 @@
       <button class="subtractBtn">-</button>
       <button class="btn">0</button>
       <button class="dotBtn">.</button>
-      <button class="clear">C</button>
+      <div class="clearContainer">
+        <button class="clear">C</button>
+        <button class="undo">U</button>
+      </div>
       <button class="addBtn">+</button>
       <button class="equalBtn">=</button>
     </div>
+    <h6>@felipeggrs</h6>
   </div>
   
 </body>
